Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69922

[REG 5.10.0->5.11.1] Can't redock QDockWidget after floating, closing, and reopening

    XMLWordPrintable

Details

    • macOS, Windows

    Description

      In Qt 5.11.1, you create a dock widget and it can become impossible to redock after floating.

      To reproduce, run the attached project, drag the dock widget out of the main window so that it is floating.  At this time, the dialog is still allowed to be reattached (See attachAllowed image).

      Then, hit the close button in the top right hand corner of the dialog. Make the dialog visible again via the right click context menu on the toolbar. Now, if you try to drag the docking widget back into any docking areas, it will not allow the docking (See attachUnallowed image).

      I have tested this same program in Qt 5.10.0, and after closing and reopening, the docking widget would still dock correctly.

      Attachments

        1. DockTest.zip
          5 kB
          Matthew McRaven
        2. attachAllowed.png
          1.07 MB
          Matthew McRaven
        3. attachUnallowed..png
          1.11 MB
          Matthew McRaven
        4. 01-docked.png
          16 kB
          Boris Dalstein
        5. 02-undocked.png
          18 kB
          Boris Dalstein
        6. 03-closed-then-reopened.png
          19 kB
          Boris Dalstein
        7. qtbug69922.zip
          2 kB
          Friedemann Kleint

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              richard Richard Moe Gustavsen
              mmcraven Matthew McRaven
              Votes:
              21 Vote for this issue
              Watchers:
              27 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes