Fix link order for Qt/toolchain update

Okay, this was a fun one. I wanted to see if QTBUG-69922 would be
fixed if I simply updated Qt to the latest version. It did not. Instead,
I went deep in the rabbit hole fixing build-time issues that have popped
up as the GCC and Qt versions have gone by.

Here are my old and new toolchain versions, for reference:

$ pacman -Ss gcc | grep installed
mingw32/mingw-w64-i686-gcc 9.3.0-1 (mingw-w64-i686-toolchain) [installed: 7.4.0-1]
mingw32/mingw-w64-i686-gcc-libgfortran 9.3.0-1 (mingw-w64-i686-toolchain) [installed: 7.4.0-1]
mingw32/mingw-w64-i686-gcc-libs 9.3.0-1 (mingw-w64-i686-toolchain) [installed: 7.4.0-1]
mingw64/mingw-w64-x86_64-gcc-libgfortran 9.3.0-1 (mingw-w64-x86_64-toolchain) [installed: 8.2.1+20181214-1]
mingw64/mingw-w64-x86_64-gcc-libs 9.3.0-1 (mingw-w64-x86_64-toolchain) [installed: 8.2.1+20181214-1]
msys/gcc 9.3.0-1 (msys2-devel) [installed: 7.4.0-1]
msys/gcc-libs 9.3.0-1 (base) [installed: 7.4.0-1]

$ pacman -Ss qt | grep installed
mingw32/mingw-w64-i686-qt5 5.14.1-3 (mingw-w64-i686-qt mingw-w64-i686-qt5) [installed: 5.12.0-1]
mingw32/mingw-w64-i686-qt5-static 5.14.1-3 (mingw-w64-i686-qt-static mingw-w64-i686-qt5-static) [installed: 5.12.0-1]
mingw32/mingw-w64-i686-qtbinpatcher 2.2.0-4 [installed: 2.2.0-2]

Miraculously, everything worked out of the box. However, there was one
run-time issue and that was the executable thinking that
EnterCriticalSection, among some other standard library functions,
is part of discord-rpc.dll instead of its respective DLL. So I shuffled
some link parameters around. Nothing - in fact, the stdcall-fixup errors
were going away, and Dependency Walker was not showing any particular
dependency anymore for any functions in BASS or the Discord DLLs.

At some point it starts working, but then right at the call to the first
BASS function, the program segfaults and the address to BASS_Init
is invalid. So it seems like BASS was not really linked correctly.

Hmm. Interesting. Long story short, I deleted the .lib files for
discord-rpc and BASS and voila, everything works again.

So, don't use .lib files for linking if you're going to do dynamic
linking. Seems like that confuses GCC 9.